# ChangeLog for app-admin/sudo
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/sudo/ChangeLog,v 1.48 2005/06/08 12:39:48 flameeyes Exp $

*sudo-1.6.7_p5-r5 (08 Jun 2005)

  08 Jun 2005; <flame@gentoo.org> +sudo-1.6.7_p5-r5.ebuild:
  New revision bump to have it working on Gentoo/FreeBSD.

  06 Jun 2005; Tavis Ormandy <taviso@gentoo.org>
  -files/sudo-1.6.8_p1-suid_fix.patch, files/sudoers, sudo-1.6.8_p8-r2.ebuild:
  remove stale patch.

  06 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  sudo-1.6.7_p5-r4.ebuild:
  Stable on sparc

  06 Jun 2005; Tavis Ormandy <taviso@gentoo.org> sudo-1.6.8_p8-r2.ebuild:
  add some additional variables to blacklist from common interpreters. 
  please see coments in ebuild.

*sudo-1.6.8_p8-r2 (06 Jun 2005)

  06 Jun 2005; Tavis Ormandy <taviso@gentoo.org> +files/sudo-1.6.8_p8,
  sudo-1.6.8_p8-r2.ebuild:
  fix longstanding bug with insults and pam + timestamps.

  06 Jun 2005; Tavis Ormandy <taviso@gentoo.org>
  -files/sudo-strip-shellopts.diff, sudo-1.6.7_p5-r4.ebuild,
  -sudo-1.6.8_p8-r1.ebuild:
  add function to strip bad vars.
  enable ldap support.

*sudo-1.6.8_p8-r1 (05 Jun 2005)

  05 Jun 2005; Tavis Ormandy <taviso@gentoo.org>
  +files/sudo-strip-shellopts.diff, +sudo-1.6.7_p5-r4.ebuild,
  +sudo-1.6.8_p8-r1.ebuild, -sudo-1.6.8_p8.ebuild:
  start stripping shellopts as well.
  also remove stale ebuilds.

  05 Jun 2005; Tavis Ormandy <taviso@gentoo.org> sudo-1.6.8_p8.ebuild:
  enabling secure_path, which currently extracts the value from profile.env,
  awaiting inspiration for a more robust solution. 
  This change is sure to generate some bug reports, but makes sense in the
  long term if a nice solution can be found for determining the path.

  20 May 2005; Diego Pettenò <flameeyes@gentoo.org> sudo-1.6.6.ebuild,
  sudo-1.6.7_p5.ebuild, sudo-1.6.7_p5-r1.ebuild, sudo-1.6.7_p5-r2.ebuild,
  sudo-1.6.7_p5-r3.ebuild, sudo-1.6.8_p1.ebuild, sudo-1.6.8_p1-r1.ebuild,