@@ -1,0 +1,1 @@
+MD5 7a60e95d0931dcf3caff7929e974d5cc sudo-1.6.8p8.tar.gz 585608
