@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/sudo
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/sudo/ChangeLog,v 1.48 2005/06/08 12:39:48 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/sudo/ChangeLog,v 1.49 2005/06/08 12:53:55 flameeyes Exp $
+
+*sudo-1.6.8_p8-r3 (08 Jun 2005)
+
+  08 Jun 2005; <flame@gentoo.org> +sudo-1.6.8_p8-r3.ebuild:
+  Another new revision for this version which uses virtual/pam and
+  pamd_mimic_system to create the pamd file. Also marked ~amd64.
 
 *sudo-1.6.7_p5-r5 (08 Jun 2005)
 
